Adding make-snippets to automate deploy process

--- a/src/gatling/resources/conf/application.conf
+++ b/src/gatling/resources/conf/application.conf
@@ -10,10 +10,9 @@ gatling {
 }
 
 api {
-  index = "listings"
   http {
-    base = "localhost:8482"
-    path = "/v2/"
+    base = "localhost:8080"
+    path = "/"
     connTimeout = 5000
     readTimeout = 2000
   }
