--- a/src/gatling/resources/conf/scenarios.conf
+++ b/src/gatling/resources/conf/scenarios.conf
@@ -3,7 +3,7 @@ scenarios = [
     scenario: {
       id: "ids"
       title: "IDs"
-      decription: "Search by IDs"
+      description: "Search by IDs"
       users: 16
       repeat: 5000
       source: "com.vivareal.search.context.SourceFeederIds$"
@@ -14,12 +14,24 @@ scenarios = [
     scenario: {
       id: "idsIn"
       title: "IDs IN"
-      decription: "Search by IDs IN"
+      description: "Search by IDs IN"
       users: 16
       repeat: 5000
       range: 10
       source: "com.vivareal.search.context.SourceFeederIdsIn$"
       query: "?from=${from}&size=${size}&filter=id IN [${value}]"
+    }
+  }
+  {
+    scenario: {
+      id: "files"
+      title: "Files search"
+      description: "Search by IDs files"
+      users: 1
+      repeat: 5
+      source: "com.vivareal.search.context.SourceFeederFromFile$"
+      query: "/${line}"
+      file: "ids.txt"
     }
   }
 ]
