Refactoring line to value

--- a/src/gatling/resources/conf/scenarios.conf
+++ b/src/gatling/resources/conf/scenarios.conf
@@ -30,7 +30,7 @@ scenarios = [
       users: 1
       repeat: 5
       source: "com.vivareal.search.context.SourceFeederFromFile$"
-      query: "/${line}"
+      query: "/${value}"
       file: "ids.txt"
     }
   }
