Fixing slack reports

--- a/src/gatling/resources/conf/scenarios.conf
+++ b/src/gatling/resources/conf/scenarios.conf
@@ -3,6 +3,7 @@ scenarios = [
     scenario: {
       id: "ids"
       title: "IDs"
+      path: "/v2/listings"
       description: "Search by IDs"
       users: 16
       repeat: 5000
@@ -14,6 +15,7 @@ scenarios = [
     scenario: {
       id: "idsIn"
       title: "IDs IN"
+      path: "/v2/listings"
       description: "Search by IDs IN"
       users: 16
       repeat: 5000
@@ -26,6 +28,7 @@ scenarios = [
     scenario: {
       id: "files"
       title: "Files search"
+      path: "/v2/listings"
       description: "Search by IDs files"
       users: 1
       repeat: 5
