fetch csv from graylog api

--- a/src/gatling/resources/conf/application.conf
+++ b/src/gatling/resources/conf/application.conf
@@ -24,8 +24,16 @@ aws {
     bucket = "search-us-east-1"
     folder = "load-tests"
     reports = "reports"
-    pathsFile = "paths.csv"
   }
+}
+
+graylog {
+  query = "application:cloudflare AND ClientRequestHost:www\\.vivareal\\.com\\.br AND ClientRequestURI:\\/imovel\\/* AND OriginResponseStatus:200 AND ClientRequestMethod:GET"
+  pathsFile = "paths.csv"
+  fields="ClientRequestURI"
+  authorization = ""
+  range="300"
+  limit="5000"
 }
 
 slack {
