--- a/src/gatling/resources/conf/application.conf
+++ b/src/gatling/resources/conf/application.conf
@@ -29,8 +29,8 @@ aws {
 
 graylog {
   query = "application:cloudflare AND ClientRequestHost:www\\.vivareal\\.com\\.br AND ClientRequestURI:\\/imovel\\/* AND OriginResponseStatus:200 AND ClientRequestMethod:GET"
-  pathsFile = "paths.csv"
-  fields="ClientRequestURI"
+  urisFile = "uris.csv"
+  uriField="ClientRequestURI"
   authorization = ""
   range="300"
   limit="5000"
