simple csv file simulation

--- a/src/gatling/resources/conf/application.conf
+++ b/src/gatling/resources/conf/application.conf
@@ -36,6 +36,10 @@ graylog {
   limit="5000"
 }
 
+csv {
+  fileName = "uris.csv"
+}
+
 slack {
   notify = true
   channel = "#alerts-search-ranking"
