--- a/src/gatling/resources/conf/application.conf
+++ b/src/gatling/resources/conf/application.conf
@@ -18,6 +18,12 @@ api {
   }
 }
 
+es {
+  http {
+    base = "prod-search-es-api-dias.vivareal.com:9200"
+  }
+}
+
 aws {
   region = "us-east-1"
   s3 {
